bad/redefine_builtin_function_readInt.example_compiler_output
ERROR
[1mbad/redefine_builtin_function_readInt.lat:2:1: [1;31merror: [0;1mcannot define function having the same name as the predefined function `readInt`[m
int readInt() { return 42; }
[1;32m^[m
